--- a/layouts/partials/equipe/historia-mestre.html
+++ b/layouts/partials/equipe/historia-mestre.html
@@ -28,17 +28,55 @@
         {{ . | markdownify }}
       {{ end }}
 
-      <!-- Currículo no final do conteúdo -->
-      <div class="mestre-curriculo">
-        <a
-          href="/docs/curriculo-cultural-mestre-jaguara.pdf"
-          target="_blank"
-          rel="noopener"
-        >
-          📄 Currículo cultural do Mestre Fundador (PDF)
-        </a>
-      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section galeria-mestre">
+  <div class="container">
+    <div class="galeria-grid">
+
+      <figure>
+        <img src="/img/mestre_jaguara_mestre_zambi_mestre_gato_preto.webp" alt="Mestre Jaguara, Mestre Zambi e Mestre Gato Preto">
+        <figcaption>Mestre Jaguara e Mestre Gato Preto</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_jaguara_e_mestre_leopodina.webp" alt="Mestre Jaguara e Mestre Leopoldina">
+        <figcaption>Convivência e troca com Mestre Leopoldina</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_jaguara_mestre_ananias.webp" alt="Mestre Jaguara e Mestre Ananias">
+        <figcaption>Mestre Jaguara ao lado do grande Mestre Ananias</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_jaguara_mestre_zambi.webp" alt="Mestre Jaguara e Mestre Zambi">
+        <figcaption>Mestre Jaguara em sua caminhada com Mestre Zambi</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_jaguara_mestre_zambi_ii.webp" alt="Mestre Jaguara e Mestre Zambi">
+        <figcaption>As rodas de capoeira do Mestre Zambi</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_jaguara_mestre_zambi_iii.webp" alt="Mestre Jaguara e Mestre Zambi">
+        <figcaption>As rodas de capoeira do Mestre Zambi</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_burgues_mestre_jaguara.webp" alt="Mestre Burgues e Mestre Jaguara">
+        <figcaption>Mestre Burgues e Mestre Jaguara quando era integrante do Grupo Muzenza</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/primeira_turma_kwanza.webp" alt="Mestre Jaguara e a primeira turma do Grupo Kwanza">
+        <figcaption>Primeira Turma Kwanza</figcaption>
+      </figure>
 
     </div>
   </div>
 </section>
+
