--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -31,7 +31,7 @@
       <br>dentro e fora da roda.
     </p>
 
-    <a href="/vem-aprender/" class="btn-primary">
+    <a href="/contatos/" class="btn-primary">
       AGENDAR AULA
     </a>
   </div>
